release 1.0.1 (2008-11/12)
- Included simple Groovy example.
- Fixed issue 128
  https://jersey.dev.java.net/issues/show_bug.cgi?id=128
  An method parameter that is a request entity is a parameter that is:
  1) not annotated with any annotations; or
  2) annotated with one or more annotations all of which are recognized by
     the Jersey runtime.
- Fixed issue 117
  https://jersey.dev.java.net/issues/show_bug.cgi?id=117
  A JAXB unmarshalling error from the JAXB related providers will result in
  a 400 response.
- Fixed issue 126
  https://jersey.dev.java.net/issues/show_bug.cgi?id=126
  Registered ExceptionMapper's will only map exceptions thrown by the
  application and not by the Jersey runtime (which is an error, either in
  the runtime itself or in the configuration of the application).
- Fixed issue 124
  https://jersey.dev.java.net/issues/show_bug.cgi?id=124
  The method HttpRequestContext.getFormParameters can be used by a filter to
  obtain the form parameters.
  
release 1.0 (2008-10-13)
- The response filter chain will now get invoked if an exception is thrown
  from a request filter or a resource class and is mapped to a response.
  If an exception is thrown from a response filter then the response filter
  chain is terminated and the exception is mapped to a response.
- Fixed issue 119
  https://jersey.dev.java.net/issues/show_bug.cgi?id=119
  Locale instances not correctly created from HTTP language-based headers.
- Fixed issue with bridge methods being included in the analysis
  of resource classes.
- When implicit views are enabled allow deferral to implicit GET when
  non of the explicit GETs match. Previously if there were any explicit
  GETs non-matching or otherwise no deferral occurred.
- Fixed issue 115.
  https://jersey.dev.java.net/issues/show_bug.cgi?id=115
  UriBulder.buildFromEncoded does not work correctly for query parameters
  that contain '+' characters.
- Fixed issue 114.
  https://jersey.dev.java.net/issues/show_bug.cgi?id=114