@@ -1,4 +1,6 @@
 release 1.0.1 (2008-11/12)
+- Fixed reloading of servlet container. The configuration of the web application
+  occurs only at servlet initiation and not when a reload occurs.
 - Included simple Groovy example.
 - Fixed issue 128
   https://jersey.dev.java.net/issues/show_bug.cgi?id=128
